--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             </div>
           </section>
 
-          <div
+          <section
             class="section hourly-forecast"
             aria-label="hourly forecast"
             data-hourly-forecast
@@ -512,11 +512,59 @@
                     <p class="body-3">12 km/h</p>
                   </div>
                 </li>
+                <li class="slider-item">
+                  <div class="card card-sm slider-card">
+                    <p class="body-3">03 PM</p>
+                    <img
+                      src="assets/images/weather_icons/direction.png"
+                      alt=""
+                      class="weather-icon"
+                      width="48"
+                      height="48"
+                      loading="lazy"
+                    />
+
+                    <p class="body-3">12 km/h</p>
+                  </div>
+                </li>
               </ul>
             </div>
-          </div>
+          </section>
+
+          <footer class="footer">
+            <p class="body-3">
+              Copyright 2023 limonlukebap. All Rights Reserved.
+            </p>
+            <p class="body-3">
+              Powered By
+              <a
+                href="https://openweathermap.org/api"
+                title="Free OpenWeather Api"
+                target="_blank"
+                rel="noopener"
+              >
+                <img
+                  src="assets/images/openweather.png"
+                  alt="OpenWeather"
+                  loading="lazy"
+                  width="150"
+                  height="30"
+                />
+              </a>
+            </p>
+          </footer>
         </div>
+
+        <div class="loading" data-loading></div>
       </article>
     </main>
+
+    <section class="error-content" data-error-content>
+      <h2 class="heading">404</h2>
+      <p class="body-1">Page not found!</p>
+      <a href="#" class="btn-primary">
+        <span class="span">Go Home</span>
+      </a>
+    </section>
   </body>
 </html>
