search-bar edited

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               class="search-field"
               data-search-field
             />
-            <span class="m-icon">search</span>
+            <span class="m-icon leading-icon">search</span>
             <button
               class="icon-btn leading-icon has-state"
               aria-label="close search"
@@ -54,7 +54,7 @@
             </button>
           </div>
 
-          <div class="searchresult" data-search-result>
+          <div class="search-result" data-search-result>
             <ul class="view-list" data-search-list>
               <li class="view-item">
                 <span class="m-icon">location_on</span>
