--- a/index.html
+++ b/index.html
@@ -88,96 +88,10 @@
           ></section>
 
           <section
-            class="setion forecast"
+            class="section forecast"
             aria-labelledby="forecast-label"
             data-5-day-forecast
-          >
-            <h2 class="title-2" id="forecast-label">5 Days Forecast</h2>
-            <div class="card card-lg forecast-card">
-              <ul>
-                <li class="card-item">
-                  <div class="icon-wrapper">
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt="Overcast Clouds"
-                      class="weather-icon"
-                      width="36"
-                      height="36"
-                    />
-                    <span class="span">
-                      <p class="title-2">25</p>
-                    </span>
-                  </div>
-                  <p class="label-1">17 Feb</p>
-                  <p class="label-1">Friday</p>
-                </li>
-                <li class="card-item">
-                  <div class="icon-wrapper">
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt="Overcast Clouds"
-                      class="weather-icon"
-                      width="36"
-                      height="36"
-                    />
-                    <span class="span">
-                      <p class="title-2">25</p>
-                    </span>
-                  </div>
-                  <p class="label-1">17 Feb</p>
-                  <p class="label-1">Friday</p>
-                </li>
-                <li class="card-item">
-                  <div class="icon-wrapper">
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt="Overcast Clouds"
-                      class="weather-icon"
-                      width="36"
-                      height="36"
-                    />
-                    <span class="span">
-                      <p class="title-2">25</p>
-                    </span>
-                  </div>
-                  <p class="label-1">17 Feb</p>
-                  <p class="label-1">Friday</p>
-                </li>
-                <li class="card-item">
-                  <div class="icon-wrapper">
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt="Overcast Clouds"
-                      class="weather-icon"
-                      width="36"
-                      height="36"
-                    />
-                    <span class="span">
-                      <p class="title-2">25</p>
-                    </span>
-                  </div>
-                  <p class="label-1">17 Feb</p>
-                  <p class="label-1">Friday</p>
-                </li>
-                <li class="card-item">
-                  <div class="icon-wrapper">
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt="Overcast Clouds"
-                      class="weather-icon"
-                      width="36"
-                      height="36"
-                    />
-                    <span class="span">
-                      <p class="title-2">25</p>
-                    </span>
-                  </div>
-                  <p class="label-1">17 Feb</p>
-                  <p class="label-1">Friday</p>
-                </li>
-              </ul>
-            </div>
-          </section>
+          ></section>
         </div>
 
         <div class="content-right">
@@ -185,312 +99,13 @@
             class="section highlights"
             aria-labelledby="highlights-label"
             data-highlights
-          >
-            <div class="card card-lg">
-              <h2 class="title-2" id="highlights-label">Todays Highlights</h2>
-
-              <div class="highlight-list">
-                <div class="card card-sm highlight-card one">
-                  <h3 class="title-3">Air Quality Index</h3>
-                  <div class="wrapper">
-                    <span class="m-icon">air</span>
-                    <ul class="card-list">
-                      <li class="card-item">
-                        <p class="title-1">23.3</p>
-                        <p class="label-1">PM<sub>2.5</sub></p>
-                      </li>
-                      <li class="card-item">
-                        <p class="title-1">23.3</p>
-                        <p class="label-1">PM<sub>2.5</sub></p>
-                      </li>
-                      <li class="card-item">
-                        <p class="title-1">23.3</p>
-                        <p class="label-1">PM<sub>2.5</sub></p>
-                      </li>
-                      <li class="card-item">
-                        <p class="title-1">23.3</p>
-                        <p class="label-1">PM<sub>2.5</sub></p>
-                      </li>
-                    </ul>
-                  </div>
-                  <span class="badge aqi-1 label-1" title="aqi message"
-                    >Good</span
-                  >
-                </div>
-                <div class="card card-sm highlight-card two">
-                  <h3 class="title-3">Sunrise & Sunset</h3>
-                  <div class="card-list">
-                    <div class="card-item">
-                      <span class="m-icon">clear_day</span>
-                      <div>
-                        <p class="label-1">Sunrise</p>
-                        <p class="title-1">6:30 AM</p>
-                      </div>
-                    </div>
-                    <div class="card-item">
-                      <span class="m-icon">clear_night</span>
-                      <div>
-                        <p class="label-1">Sunset</p>
-                        <p class="title-1">5:54 PM</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card card-sm highlight-card">
-                  <h3 class="title-3">Humidity</h3>
-                  <div class="wrapper">
-                    <span class="m-icon">humidity_percentage</span>
-                    <p class="title-1">35<sub>%</sub></p>
-                  </div>
-                </div>
-                <div class="card card-sm highlight-card">
-                  <h3 class="title-3">Pressure</h3>
-                  <div class="wrapper">
-                    <span class="m-icon">airwave</span>
-                    <p class="title-1">1052<sub>hPa</sub></p>
-                  </div>
-                </div>
-                <div class="card card-sm highlight-card">
-                  <h3 class="title-3">Visibility</h3>
-                  <div class="wrapper">
-                    <span class="m-icon">visibility</span>
-                    <p class="title-1">10<sub>km</sub></p>
-                  </div>
-                </div>
-                <div class="card card-sm highlight-card">
-                  <h3 class="title-3">Feels Like</h3>
-                  <div class="wrapper">
-                    <span class="m-icon">thermostat</span>
-                    <p class="title-1">25&deg;<sub>c</sub></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
+          ></section>
 
           <section
             class="section hourly-forecast"
             aria-label="hourly forecast"
             data-hourly-forecast
-          >
-            <h2 class="title-2">Today at</h2>
-            <div class="slider-container">
-              <ul class="slider-list" data-temp>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">25&deg;</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">25&deg;</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">25&deg;</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">25&deg;</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">25&deg;</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">25&deg;</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/01n.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">25&deg;</p>
-                  </div>
-                </li>
-              </ul>
-              <ul class="slider-list" data-wind>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/direction.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">12 km/h</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/direction.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">12 km/h</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/direction.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">12 km/h</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/direction.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">12 km/h</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/direction.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">12 km/h</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/direction.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">12 km/h</p>
-                  </div>
-                </li>
-                <li class="slider-item">
-                  <div class="card card-sm slider-card">
-                    <p class="body-3">03 PM</p>
-                    <img
-                      src="assets/images/weather_icons/direction.png"
-                      alt=""
-                      class="weather-icon"
-                      width="48"
-                      height="48"
-                      loading="lazy"
-                    />
-
-                    <p class="body-3">12 km/h</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </section>
+          ></section>
 
           <footer class="footer">
             <p class="body-3">
@@ -523,11 +138,11 @@
     <section class="error-content" data-error-content>
       <h2 class="heading">404</h2>
       <p class="body-1">Page not found!</p>
-      <a href="#" class="btn-primary">
+      <a href="#/weather?lat=51.5073219&lon=-0.1276474" class="btn-primary">
         <span class="span">Go Home</span>
       </a>
     </section>
-
     <script src="assets/js/app.js" type="module"></script>
+    <script src="assets/js/route.js" type="module"></script>
   </body>
 </html>
